--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <figcaption>Tupac Amaru Shakur</figcaption>
             </figure>
 
-            <p>Tupac Amaru Shakur, também conhecido pelos seus nomes artísticos 2Pac e Makaveli, foi um rapper,
+            <p><strong>Tupac Amaru Shakur</strong>, também conhecido pelos seus nomes artísticos <strong>2Pac</strong> e <strong>Makaveli</strong>, foi um rapper,
                 ator e compositor norte-americano. Ele é considerado um dos melhores e mais influentes rappers de
                 todos os tempos.</p>
             
